--- a/contact.html
+++ b/contact.html
@@ -35,29 +35,20 @@
       <h1 class="mb-5">Let's get in touch</h1>
       <div class="row">
         <div class="col-lg-8">
-          <form class="form-control">
-            <div class="mb-3">
-              <label for="nameFormControl" class="form-label">Your Name</label>
-              <input
-                type="name"
-                class="form-control"
-                id="nameFormControl"
-                placeholder="Leyla Kheyri"
-              />
-            </div>
+          <form class="form-control mb-5">
             <div class="mb-3">
               <label for="emailFormControl" class="form-label"
                 >Your Email</label
               >
 
-              <input
-                type="email"
-                class="form-control"
-                id="emailFormControl"
-                placeholder="name@example.com"
-              />
-              <button type="submit" class="btn btn-branding mt-4">Send</button>
+              <input type="email" class="form-control" id="emailFormControl" />
             </div>
+            <div class="mb-3">
+              <label for="textFormControl" class="form-label">Your Message</label>
+              <textarea type="text" class="form-control" id="textFormControl" />
+            </textarea>
+            </div>
+            <button type="submit" class="btn btn-branding mt-4">Send</button>
           </form>
         </div>
         <div class="col-lg-4">
