--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About page</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -32,6 +32,22 @@
   </head>
   <body>
     <div class="content-container container">
+      <nav class="d-flex justify-content-between mb-5">
+        <a href="/" title="home page link"
+          ><img class="d-none d-lg-flex" src="img/logo.png" alt="logo" />
+          <img class="d-lg-none" src="img/logo-small.jpg" alt="small-logo" />
+        </a>
+        <ul>
+          <li>
+            <a href="/index.html" title="home page link">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="about page link">About</a>
+          </li>
+          <li><a href="/work.html" title="work page link">Work</a></li>
+          <li><a href="/contact.html" title="contact page link">Contact</a></li>
+        </ul>
+      </nav>
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
@@ -42,13 +58,67 @@
               I’m open to work remotely and have flexible hours. I’m highly
               skilled in JavaScript and React.
             </p>
-            <a class="btn btn-branding mb-5">see my project</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding mb-5"
+              title="work page link"
+              >see my project</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/patricia.png" alt="" />
+          <img class="img-fluid" src="img/patricia.png" alt="patricia image" />
         </div>
       </div>
     </div>
+    <footer>
+      <div class="d-none d-lg-flex justify-content-between footer-box">
+        <div>
+          <h2>Work Inquiry</h2>
+          <p class="ms-1">Let's work together</p>
+        </div>
+        <div>
+          <a
+            class="btn btn-branding mt-5 me-5"
+            href="/contact.html"
+            title="contact page link"
+            >contact me</a
+          >
+        </div>
+      </div>
+
+      <p class="text-center m-5">
+        <a
+          class="email-link"
+          href="mailto:Leyla.kh@gmail.com"
+          title="email link"
+          >Leyla.kh@gmail.com</a
+        >
+      </p>
+      <div class="social-link text-center">
+        <a href="https://www.instagram.com/Leyla.kh"
+          ><i
+            class="fab fa-instagram"
+            title="inatagram link"
+            target="_blank"
+          ></i
+        ></a>
+        <a href="https://www.github.com/Leyla.kh"
+          ><i class="fab fa-github" title="github link" target="_blank"></i
+        ></a>
+        <a href="https://www.twitter.com/Leyla.kh"
+          ><i class="fab fa-twitter" title="twitter link" target="_blank"></i
+        ></a>
+      </div>
+      <p class="text-center m-5">
+        ✌️ This website was coded by Leyla Kheyri, and is
+        <a
+          href="https://github.com/Leyla-kh/Portfolio-Project"
+          title="github link"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
