--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact page</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -24,25 +24,28 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/dec00a97d7.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/dec00a97d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
-    <div class="content container">
-      <nav class="d-flex justify-content-between mb-5">
-        <img class="d-none d-lg-flex" src="img/logo.png" alt="logo">
-        <img class="d-lg-none" src="img/logo-small.jpg" alt="small-logo">
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Work</li>
-          <li>Contact</li>
-
-        </ul >
-      </nav>
+    <div class="content-container container">
+      <nav
+      class="d-flex justify-content-between mb-5"
+    >
+      <a href="/" title="home page link"
+        ><img class="d-none d-lg-flex" src="img/logo.png" alt="logo" />
+        <img class="d-lg-none" src="img/logo-small.jpg" alt="small-logo" />
+      </a>
+      <ul>
+        <li >
+          <a href="/index.html" title="home page link">Home</a>
+        </li>
+        <li><a href="/about.html" title="about page link">About</a></li>
+        <li><a href="/work.html" title="work page link">Work</a></li>
+        <li class="active"><a href="/contact.html" title="contact page link">Contact</a></li>
+      </ul>
+    </nav>
       <div class="content-container">
       <h1 class="mb-5">Let's get in touch</h1>
       <div class="row">
@@ -65,16 +68,16 @@
         </div>
         <div class="col-lg-4">
           <h3>Email</h3>
-          <p><a href="mailto:Leyla.kh@gmail.com"> Leyla.kh@gmail.com</a></p>
+          <p><a href="mailto:Leyla.kh@gmail.com" title="email link"> Leyla.kh@gmail.com</a></p>
           <h3>twitter</h3>
           <p>
-            <a href="https://twitter.com/Leyla.kh" target="_blank">
+            <a href="https://twitter.com/Leyla.kh" target="_blank" title="twitter account link">
               @Leyla.kh</a
             >
           </p>
           <h3>Instagram</h3>
           <p>
-            <a href="https://instagram.com/Leyla.kh" target="_blank">
+            <a href="https://instagram.com/Leyla.kh" target="_blank" title="instagram account link">
               Leyla.kh</a
             >
           </p>
@@ -82,5 +85,55 @@
       </div>
       </div>
     </div>
+    <footer>
+      <div class="d-none d-lg-flex justify-content-between footer-box">
+        <div>
+          <h2>Work Inquiry</h2>
+          <p class="ms-1">Let's work together</p>
+        </div>
+        <div>
+          <a
+            class="btn btn-branding mt-5 me-5"
+            href="/contact.html"
+            title="contact page link"
+            >contact me</a
+          >
+        </div>
+      </div>
+
+      <p class="text-center m-5">
+        <a
+          class="email-link"
+          href="mailto:Leyla.kh@gmail.com"
+          title="email link"
+          >Leyla.kh@gmail.com</a
+        >
+      </p>
+      <div class="social-link text-center">
+        <a href="https://www.instagram.com/Leyla.kh"
+          ><i
+            class="fab fa-instagram"
+            title="inatagram link"
+            target="_blank"
+          ></i
+        ></a>
+        <a href="https://www.github.com/Leyla.kh"
+          ><i class="fab fa-github" title="github link" target="_blank"></i
+        ></a>
+        <a href="https://www.twitter.com/Leyla.kh"
+          ><i class="fab fa-twitter" title="twitter link" target="_blank"></i
+        ></a>
+      </div>
+      <p class="text-center m-5">
+        ✌️ This website was coded by Leyla Kheyri, and is
+        <a
+          href="https://github.com/Leyla-kh/Portfolio-Project"
+          title="github link"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
+  
 </html>
